--- a/index.html
+++ b/index.html
@@ -8,66 +8,29 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <section class="desktop">
-        <main>
-            <section class="main">
-                <div class="main-container">
-                    <div class="left-container">
-                        <div class="logo-container">
-                            <img class="img-header" src="LOGO oficial.png" alt="Logo ScanTXT">
+    <section class="main">
+        <div class="main-container">
+            <div class="white-board">
+                <header>
+                    <section class="header-top">
+                        <div class="header-container">
+                            <h2 class="scantxt-text">ScanTXT</h2>
+                            <ul class="menu-li">
+                                <li class="li-menu">IMG to Text</li>
+                                <li class="li-menu">Translate Text</li>
+                                <li class="li-menu">Summarize Text</li>
+                                <li class="li-menu">Text to ABNT</li>
+                                <li class="li-menu">Correct Text</li>
+                            </ul>
+                            <button class="tutorial-button">How to use?</button>
                         </div>
-                        <div class="text-container">
-                            <h1 class="h1-header">Convert Images to Text</h1>
-                            <p class="p-header">The best way to convert images to text</p>
-                        </div>
-                        <div class="card-container">
-                            <p class="p-tutorial">How to convert IMG to JPG?</p>
-                            <p class="p-tutorial-2">Select the image you want to convert, then click on the GO button and copy your text!</p>
-                        </div>
-                        </div>
-                        <div class="right-container">
-                            <div class="image-load-container">
-                                <h1 class="drop">Drop</h1>
-                                <p class="or">or</p>
-                                <button class="select" type="submit">Select</button>
-                            </div>
-                            <div class="result">
-                                <div class="text-result">
-                                    <p id="text-converted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ab repellat consequatur fugit voluptate corrupti iste nulla corporis laborum illo?</p>
-                                </div>
-                            </div>
-                            <button id="btn-copy" type="submit">COPY</button>
-                        </div>
-                </div>
-            </section>
-        </main>
-    </section>
-    <section class="mobile">
-        <header>
-            <img src="LOGO oficial.png" alt="Logo">
-            <h1>Convert Images to Text</h1>
-            <p>The best way to convert images to text</p>
-        </header>
-        <main>
-            <div class="result">
-                <div class="text-result">
-                    <p id="text-converted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ea esse, ullam itaque a fuga laborum alias illum vitae aliquam voluptatem, sint dicta assumenda? Expedita aperiam alias voluptatum cupiditate nulla!Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ab repellat consequatur fugit voluptate corrupti iste nulla corporis laborum illo?</p>
-                </div>
+                    </section>
+                    <section class="introduction-container">
+                        <h1 class="intro-h1">Welcome to ScanTXT</h1>
+                    </section>
+                </header>
             </div>
-            <button id="btn-copy" type="submit">COPY</button>
-            <div class="drop-select">
-                <h2>Drop</h2>
-                <p>or</p>
-                <button>Select</button>
-            </div>     
-        </main>
-        <section class="card-converted">
-        <h2>How to convert IMG to JPG?</h2>
-        <p>Select the image you want to convert, then click the GO button and copy your text!</p>
-        </section>
-        <footer>
-            <p>Copyright CodeNext ©2025</p>
-        </footer>
+        </div>
     </section>
 </body>
 </html>
